@@ -267,7 +267,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_mixer.html#fadeout>pygame.mixer.fadeout</a> - fadeout all channels<br>
 <a href=ref/pygame_mixer.html#find_channel>pygame.mixer.find_channel</a> - find an available sound channel<br>
 <a href=ref/pygame_mixer.html#get_busy>pygame.mixer.get_busy</a> - query busy channels<br>
-<a href=ref/pygame_mixer.html#get_init>pygame.mixer.get_init</a> - query initialization for the mixer<br>
+<a href=ref/pygame_mixer.html#get_init() -> >pygame.mixer.get_init() -> </a> - query initialization for the mixer<br>
 <a href=ref/pygame_mixer.html#get_num_channels>pygame.mixer.get_num_channels</a> - query the number of channels<br>
 <a href=ref/pygame_mixer.html#init>pygame.mixer.init</a> - initialize mixer module<br>
 <a href=ref/pygame_mixer.html#pause>pygame.mixer.pause</a> - pause all channels<br>
