@@ -4,6 +4,10 @@
 # BREAK = change breaks existing code
 # BUG   = fixed a bug that was (or could have been) crashing
 
+July 23, 2001
+	music specifically halted when quitting (should not matter?)
+	mixer.get_init() now returns the initialized playback format
+
 July 21, 2001
 	all events can be posted, not just USEREVENT
 	subsurfaces inherit colorkey and alpha settings
